<?xml version="1.0"?>
<package format="2">
  <name>test_python38_on_melodic</name>
  <version>0.0.0</version>
  <description>The test_python38_on_melodic package</description>

  <maintainer email="spot@todo.todo">spot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>


  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
